# ResoBotGW

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: GlobalWorkspace_BoundaryMock.md  ResoBotGW_AgentOrchestration.md
src/resobot_gw/: __init__.py  __main__.py  bus.py  config.py  obs.py  runtime.py
src/resobot_gw/agents/: __init__.py  coordinator.py  interface.py  openai_entry.py  openai_runner.py  orchestrator.py  runner.py
tests/: test_bus.py  test_cli.py  test_config.py  test_coordinator.py  test_orchestrator.py  test_runtime.py
